--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -29,7 +29,7 @@ jobs:
         run: mvn -version
       # Build application with Maven
       - name: Build with Maven
-        run: mvn package
+        run: mvn clean install
       # Upload artifacts 
       - name: Archive
         uses: actions/upload-artifact@v4
